# DL-CASE2

./: .gitignore  README.md
app/: README.md  docker-compose.yml  nginx.conf
app/backend/: Dockerfile  README.md  main.py  pyproject.toml
app/backend/api/api_v1/: api.py  deps.py
app/backend/api/api_v1/endpoints/: models.py  probes.py
app/backend/core/: settings.py
app/backend/exceptions/: base.py
app/backend/middlewares/: exception.py
app/backend/schemas/: base.py  models.py
app/backend/services/: model.py
app/ui/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
app/ui/src/: App.css  App.tsx  index.css
app/ui/src/api/: models.ts
notebooks/: README.md  matching.ipynb  matching_keywords.ipynb  precalculate_embeddings.ipynb  precalculate_embeddings_index.ipynb  preprocess.ipynb
